<resources>

    <style name="Button.White" parent="ThemeOverlay.AppCompat">
        <item name="colorAccent">@android:color/white</item>
    </style>


    <string name="app_name">Diploma Project</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_view_id_map">Map</string>
    <string name="close_maps">Close</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity">Smart Recycler</string>
    <string name="Registration">Registration</string>
    <string name="delete_location">Delete Location</string>
    <string name="MarkerActivity">Marker Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_Pins" />
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MainPage" />
    <string name="Login" >Login</string>
    <string name="title_activity_marker">MarkerActivity</string>
    <string name="log_out">Log Out</string>
    <string name="select_my_locations">Select My Locations</string>
    <string name="all_locations">All Locations</string>
    <string name="your_locations">Your Locations</string>
    <string name="show_my_locations">Show my locations</string>
    <string name="locations_for_cleaning">Locations for cleaning</string>
    <string name="show_cleaned_locations">Show cleaned locations</string>
</resources>