<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fragmentAllowEnterTransitionOverlap="@string/text_view_id_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="org.elsys.diploma.MainActivity" />

    <Switch
        android:id="@+id/switchCleanedLocations"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:background="#55F629"
        android:text="@string/show_cleaned_locations"
        app:layout_constraintBottom_toBottomOf="@+id/location_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_button"
        android:layout_width="194dp"
        android:layout_height="72dp"
        android:background="@drawable/main_add_location_button"
        android:text="@string/add_location"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/numberPins"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_add_location_button"
        android:text="@string/text_Pins"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_button"
        android:layout_width="192dp"
        android:layout_height="73dp"
        android:background="@drawable/main_add_location_button"
        android:text="@string/delete_location"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:background="@drawable/main_add_location_button"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Switch
        android:id="@+id/switchMyLocations"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:background="#F8E219"
        android:text="@string/show_my_locations"
        app:layout_constraintBottom_toBottomOf="@+id/location_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchLocationsForCleaning"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:background="#F60606"
        android:text="@string/locations_for_cleaning"
        app:layout_constraintBottom_toBottomOf="@+id/location_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>